--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-04 Pedro Canadilla <pedro.canadilla@gmail.com>
+    * Fixed a bug in the MMCKM model. The RO functions were returning values greather than zero. Thanks to See Chuen-Teck (see_chuenteck at yahoo.com.sg) for detect it.
+    * Changed the names of the WWq and LLq functions to Wqq and Lqq as suggested for See Chuen-Teck, because there are more natural the new names than previous.
+    * Implemented functions to compare basic queueing models. No networks models can be compared yet. Thanks to See Chuen-Teck for the suggestion.
+
+
 2012-10-21 Pedro Canadilla <pedro.canadilla@gmail.com>
     * New version 0.1.6. Added the Mixed queueing network model.
 
