--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,15 @@
+2013-01-27 Pedro Canadilla <pedro.canadilla@gmail.com>
+    * Fixed typos in the SP help pages.
+    * Included a documentation pdf explaining the lastest formulae included in the package.
+
+2012-12-24 Pedro Canadilla <pedro.canadilla@gmail.com>
+    * Included the package description help file.
+
 2012-12-09 Pedro Canadilla <pedro.canadilla@gmail.com>
     * Fixed the Wqq and Lqq functions in M/M/c/K/m model.
     * Fixed doc typos.
     * Consolidation of the summary function for Open and Closed Jackson networks, to get inconsistencies solved.
-    * Added new ways to define the inputs of the Open and Closed Jackson Networks, more convenient from an operational point of view. Also, included a new way to pass a list of nodes builded before instead of use the dots parameter. More convenient for automatization or scripting.
+    * Added new ways to define the inputs of the Open and Closed Jackson Networks, more convenient from an operational point of view. Also, included a new way to pass a list of nodes built before instead of use the dots parameter. More convenient for automatization or scripting.
 
 
 2012-11-18 Pedro Canadilla <pedro.canadilla@gmail.com>
