--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-04-11 Pedro Canadilla <pedro.canadilla@gmail.com>
+    * Some minor changes requested by CRAN.
+
 2014-08-20 Pedro Canadilla <pedro.canadilla@gmail.com>
     * Fixed an error on pdf explaining Wqq and Lqq.
     * Fixed notes as cran reported it.
